--- a/Atividade 5.html
+++ b/Atividade 5.html
@@ -16,7 +16,24 @@
         </div>
     </header>
     <main>
-        <section><img id="primeira-foto" src="http://picsum.photos/500" alt=""></section>
+        <section><img id="primeira-foto" src="primeira imagem" alt="">
+        </section>
+        <section id="section-2">MINHA CHAMADA PARA O EMPREENDIMENTO</section>
+        <section></section>
+        <section id="grid-conteiner">
+            
+            <img class="grid-img" src="aviao.jpeg" alt="segunda imagem">
+            <span class="grid-span"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat quibusdam itaque libero esse voluptatum. Enim est sed vel fugiat laborum rem! Qui porro enim nihil quod nam consequatur rerum minima.</span>
+            <span class="grid-span"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat quibusdam itaque libero esse voluptatum. Enim est sed vel fugiat laborum rem! Qui porro enim nihil quod nam consequatur rerum minima.</span>
+            <img class="grid-img" src="aviao.jpeg" alt="terceira imagem">
+            <img class="grid-img" src="aviao.jpeg" alt="terceira imagem">
+            <span class="grid-span"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat quibusdam itaque libero esse voluptatum. Enim est sed vel fugiat laborum rem! Qui porro enim nihil quod nam consequatur rerum minima.</span>
+            <span class="grid-span"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat quibusdam itaque libero esse voluptatum. Enim est sed vel fugiat laborum rem! Qui porro enim nihil quod nam consequatur rerum minima.</span>
+            <img class="grid-img" src="aviao.jpeg" alt="sexta imagem">
+        </section>   
+
+
+</section>
     </main>
 </body>
 
